<resources>
    <string name="app_name">ToDO</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="task_title">Task Title</string>
    <string name="add_page_title">Add a Task</string>
    <string name="edit_page_title">Edit the Task</string>
    <string name="priority">Select Priority</string>
    <string name="high">High</string>
    <string name="medium">Medium</string>
    <string name="low">Low</string>

</resources>