<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="12dp"
        tools:context=".UpdateNoteFragment">

        <TextView
            android:id="@+id/editTaskHeading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/add_page_title"
            android:textColor="@color/red"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/task_titile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textSize="16sp"
            android:textColor="@color/text"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/task_title"
            app:layout_constraintTop_toBottomOf="@+id/editTaskHeading"
            app:layout_constraintStart_toStartOf="parent"/>



        <EditText
            android:id="@+id/editTaskTitle"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:hint="Enter the title"
            android:padding="8dp"
            android:textSize="16sp"
            android:layout_below="@id/editTaskHeading"
            android:background="@drawable/pink_border"
            android:layout_marginTop="8dp"
            android:maxLines="1"
            android:fontFamily="@font/poppins"
            app:layout_constraintTop_toBottomOf="@+id/task_titile"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/task_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/task_title"
            android:layout_marginTop="16dp"
            android:textSize="16sp"
            android:textColor="@color/text"
            android:fontFamily="@font/poppins_semibold"
            app:layout_constraintTop_toBottomOf="@+id/editTaskTitle"
            app:layout_constraintStart_toStartOf="parent"/>

        <EditText
            android:id="@+id/editTaskDesc"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:hint="Enter the description"
            android:gravity="top"
            android:padding="12dp"
            android:textSize="16sp"
            android:fontFamily="@font/poppins"
            android:background="@drawable/pink_border"
            android:layout_below="@id/editTaskTitle"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/task_description"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/task_priority"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/priority"
            android:layout_marginTop="16dp"
            android:textSize="16sp"
            android:textColor="@color/text"
            android:fontFamily="@font/poppins_semibold"
            app:layout_constraintTop_toBottomOf="@+id/editTaskDesc"
            app:layout_constraintStart_toStartOf="parent"/>

        <RadioGroup
            android:id="@+id/priorityRadioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/task_priority"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:paddingStart="24dp"
            android:paddingEnd="24dp"
            android:layout_marginTop="8dp"
            >

            <RadioButton
                android:id="@+id/radioLowPriority"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/low"
                android:textColor="@color/text"
                android:fontFamily="@font/poppins_semibold"
                android:layout_weight="1"
                />

            <RadioButton
                android:id="@+id/radioMediumPriority"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/medium"
                android:textColor="@color/text"
                android:fontFamily="@font/poppins_semibold"
                android:layout_weight="1"/>

            <RadioButton
                android:id="@+id/radioHighPriority"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/high"
                android:textColor="@color/text"
                android:fontFamily="@font/poppins_semibold"
                android:layout_weight="1"
                android:layout_gravity="center_vertical"/>

        </RadioGroup>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/editNoteFab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:clickable="true"
            android:backgroundTint="@color/pink"
            android:tintMode="@color/white"
            android:src="@drawable/baseline_done_24"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:contentDescription="editFab"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>